ags (4.1.3)

	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
	* fixed install path of gsequencer documentation

ags (4.1.2)

	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
	* using fop instead of dblatex to generate PDFs
	* fixed missing include of Gdk4 in ags_app_action_util.c

ags (4.1.1)

	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
	* fixed make pdf

ags (4.1.0)

	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
	* implemented zoom of PDF user manual
	* implemented unix print support
	* implemented application OS X accelerators
	* implemented notation edit OS X accelerators
	* implemented automation edit OS X accelerators
	* implemented wave edit OS X accelerators
	* implemented preset editor
	* new configure switch --with-gtk-unix-print

ags (4.0.13)

	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
	* fixed ags-fx-synth missing chorus destination buffer
	* fixed ags-fx-fm-synth missing chorus destination buffer
	* fixed ags-fx-sf2-synth missing chorus destination buffer
	* fixed ags-fx-sfz-synth missing chorus destination buffer

ags (4.0.12)

	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
	* fixed AgsFMSyncsynth remove callback
	* fixed AgsCompositeEditor remove wave channel selector callback
	* fixed AgsCompositeEditor machine selector set flags
	* improved AgsGui and AgsAudio introspected annotations

ags (4.0.11)

	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
	* fixed unitialized value in ags_functional_fourier_transform_test.c

ags (4.0.10)

	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
	* fixed removed unit tests in unit-system-tests.mk.am
	* fixed missing return values in libgsequencer_test.so
	* fixed ags_functional_fourier_transform_test_s16() potential floating point overflow

ags (4.0.9)

	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
	* fixed meson test dependency of libsoup-3.0
	* improved gtk-doc

ags (4.0.8)
